Fixed text alignment issues with the border.

--- a/styles.css
+++ b/styles.css
@@ -16,20 +16,20 @@ body {
   top: 0px;
   background-color: #3e3e42;
   width: clamp(1000px, 100%, 100%);
+  display: flex;
+  align-items: center;
 }
 
 #grid {
   position: relative;
+  margin-left: auto;
   display: grid;
-  grid-template-columns: 220px 200px 200px;
-  justify-content: end;
-  top: -37px;
+  grid-template-columns: repeat(3, 200px);
 }
 
 #name {
   position: relative;
-  left: 3%;
-  top: 11px;
+  margin-left: 25px;
   font-family: aAtmospheric, Arial, Helvetica, sans-serif;
   font-weight: 300;
   font-size: large;
@@ -41,11 +41,8 @@ body {
 }
 
 .grid-item {
-  margin: auto;
   position: relative;
   font-family: IceHockey, Arial, Helvetica, sans-serif;
-  top: 6px;
-  padding: 50px, 50px, 50px, 50px;
   font-size: small;
 }
 
